--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="digiteCpf">Digite seu CPF</string>
     <string name="entrar">Entrar</string>
     <string name="login_help">Precisa de ajuda? Ligue para nós!</string>
+    <string name="title_activity_home">HomeActivity</string>
 </resources>
