Criados services para login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="digiteCpf">Digite seu CPF</string>
     <string name="entrar">Entrar</string>
     <string name="login_help">Precisa de ajuda? Ligue para nós!</string>
+    <string name="login_erro">Houve um erro ao tentar efetuar login</string>
     <string name="title_activity_home">HomeActivity</string>
 </resources>
