Criados services para buscar amostras

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="entrar">Entrar</string>
     <string name="login_help">Precisa de ajuda? Ligue para nós!</string>
     <string name="login_erro">Houve um erro ao tentar efetuar login</string>
+    <string name="buscar_amostras_erro">Houve um erro ao buscar as amostras</string>
     <string name="title_activity_home">HomeActivity</string>
 </resources>
