--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login_erro">Houve um erro ao tentar efetuar login</string>
     <string name="login_invalido">Dados inválidos</string>
     <string name="buscar_amostras_erro">Houve um erro ao buscar as amostras</string>
-    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_activity_home">Lista de amostras</string>
     <string name="atualizar">Atualizar</string>
     <string name="pesquisar">Pesquisar</string>
     <string name="title_activity_mapa">Map</string>
